# studentinfomation

./: CMakeLists.txt  main.cpp  studentinfomation.cpp  studentinfomation.h  studentinfomation.ui  studentlist.cpp  studentlist.h  studentlist.ui
